--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,3 +1,14 @@
 <!--pages/mine/mine.wxml-->
-<button bindtap="getUserProfile"> 获取头像昵称 </button>
-<button bindtap="getAppsList"> 123 </button>
+<view class="user_info_wrap">
+  <view class="user_img_wrap">
+    <image class="user_bg" wx:if="{{userinfo.openId}}" src="{{userinfo.avatarUrl}}"></image>
+    <image class="user_bg" wx:else src="../../icon/nokey.png"></image>
+    <view class="user_info">
+      <image class="user_icon" wx:if="{{userinfo.openId}}" src="{{userinfo.avatarUrl}}"></image>
+      <image class="user_icon" bindtap="getUserProfile" wx:else src="../../icon/tourist.png"></image>
+      <view class="user_name" wx:if="{{userinfo.openId}}">{{userinfo.nickName}}</view>
+      <view class="user_name" wx:else >请先点击头像登录</view>
+  
+    </view>
+  </view>
+</view>
