--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -12,3 +12,18 @@
     </view>
   </view>
 </view>
+
+<view>我的收藏列表</view>
+
+<view class="shade" wx:if="{{isMoveout}}" catchtap="changeMode"></view>
+<view class="favorite_apps">
+  <navigator class="apps"
+    wx:for="{{appsList}}"
+    wx:key="appName"
+    wx:if="{{favoriteList[index]}}"
+    bindlongpress="changeMode" >
+    <image class="app_picture" src="{{item.picture}}"></image>
+    <image class="favorite_moveout" wx:if="{{isMoveout}}" src="../../icon/favorite.png" catchtap="disloveit" data-appname="{{index}}"></image>
+    <view class="app_name">{{item.appName}}</view>
+  </navigator>
+</view>
