--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -33,3 +33,59 @@
   margin-top: 40rpx;
   font-size: 40rpx;
 }
+.shade{
+  width:100%;  
+  height:100%;  
+  top:0;  
+  background:rgba(0,0,0,0.5);  
+  overflow: hidden;  
+  z-index: 1;   
+  position: absolute;  
+}
+.favorite_apps{
+
+  display: flex; 
+  flex-direction: row;
+  flex-wrap: wrap; 
+  width:96%;
+  margin: 0 auto; 
+  position: relative;
+  left:9rpx; 
+
+}
+.apps{
+
+  width: 32%;
+  background: red;
+  border: 1rpx solid black; 
+  text-align: center;
+  position: relative;
+
+}
+.app_picture{
+
+  width: 150rpx;
+  height: 150rpx;
+  border-radius: 30%;
+  margin-top: 20rpx;
+  position: relative;
+
+  
+}
+.app_name{
+  margin-bottom: 10rpx;
+  font-size: 35rpx;
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+.favorite_moveout{
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  width: 25%;
+  height: 25%;
+  z-index: 2;
+
+}
