--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -20,7 +20,7 @@
   <navigator class="apps"
     wx:for="{{appsList}}"
     wx:key="appName"
-    wx:if="{{favoriteList[index]}}"
+    wx:if="{{item.islove}}"
     bindlongpress="changeMode" >
     <image class="app_picture" src="{{item.picture}}"></image>
     <image class="favorite_moveout" wx:if="{{isMoveout}}" src="../../icon/favorite.png" catchtap="disloveit" data-appname="{{index}}"></image>
