--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,4 +1,5 @@
 <!--pages/mine/mine.wxml-->
+<!--头像和背景展示-->
 <view class="user_info_wrap">
   <view class="user_img_wrap">
     <image class="user_bg" wx:if="{{userinfo.openId}}" src="{{userinfo.avatarUrl}}"></image>
@@ -15,7 +16,9 @@
 
 <view>我的收藏列表</view>
 
+<!--删除模式时显示的遮罩层-->
 <view class="shade" wx:if="{{isMoveout}}" catchtap="changeMode"></view>
+<!--收藏列表的显示-->
 <view class="favorite_apps">
   <navigator class="apps"
     wx:for="{{appsList}}"
@@ -23,7 +26,11 @@
     wx:if="{{item.islove}}"
     bindlongpress="changeMode" >
     <image class="app_picture" src="{{item.picture}}"></image>
-    <image class="favorite_moveout" wx:if="{{isMoveout}}" src="../../icon/favorite.png" catchtap="disloveit" data-appname="{{index}}"></image>
+    <image class="favorite_moveout" 
+      wx:if="{{isMoveout}}" 
+      src="../../icon/favorite.png" 
+      catchtap="disloveit" 
+      data-appname="{{index}}"></image>
     <view class="app_name">{{item.appName}}</view>
   </navigator>
 </view>
