--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -35,7 +35,7 @@
 }
 .shade{
   width:100%;  
-  height:100%;  
+  height:150%;  
   top:0;  
   background:rgba(0,0,0,0.5);  
   overflow: hidden;  
@@ -94,5 +94,5 @@
 }
 .myList{
   font-family: KaiTi;
-  font-size: large;
+  font-size: larger;
 }
