--- a/pages/app3/app3.wxml
+++ b/pages/app3/app3.wxml
@@ -5,7 +5,7 @@
  <!--  <image src='../image/1.jpg'></image> -->
 
 
-
+ <image class="imag" src='https://i.postimg.cc/hvy90KR8/1619052410-496342.png'></image>
 
  <view class="search01">
    <view class="search02">
